--- a/app/src/main/res/layout/student_profile_edit_version_page.xml
+++ b/app/src/main/res/layout/student_profile_edit_version_page.xml
@@ -160,16 +160,20 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="250dp"
+            android:layout_height="55dp"
             android:layout_below="@id/myLinearLayout3"
-            android:text="Lorem ipsum dolor sit amet consectetur. Ac viverra ac tristique pellentesque. Amet pulvinar nisi in sit ac eget consectetur ornare. Odio pharetra vulputate pharetra eget ultricies non sagittis. "
-            android:textColor="@color/white"
-            android:textSize="14dp"
             android:layout_marginLeft="25dp"
-            />
+            android:layout_marginTop="5dp"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="bac"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
     </RelativeLayout>
 
     <RelativeLayout
@@ -225,72 +229,29 @@
                 />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/experienceText"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="250dp"
+            android:layout_height="25dp"
             android:layout_below="@id/myLinearLayout4"
-            android:text="Internship: NCOC, TCO"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:layout_marginLeft="45dp"
-            />
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/myRelativeLayout3"
-        android:padding="10dp"
-        android:id="@+id/myRelativeLayout5"
-
-        >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/myLinearLayout5"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="5dp"
             >
 
-
-            <ImageView
-                android:id="@+id/cv"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/cv_icon"
-
+                android:background="bac"
                 />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/cvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CV / Resume"
-                android:textColor="@color/white"
-                android:layout_marginLeft="5dp"
-                android:textSize="20dp"
-                android:layout_marginVertical="1dp"
-                />
-
-            <ImageView
-                android:id="@+id/uploadIcon2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/upload_icon"
-                android:layout_marginVertical="5dp"
-                android:layout_marginLeft="5dp"
-                />
-
-        </LinearLayout>
     </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/myRelativeLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/myRelativeLayout3"
-        android:layout_marginTop="50dp"
-
         android:padding="10dp">
 
         <LinearLayout
@@ -317,26 +278,24 @@
                 android:textColor="@color/white"
                 android:textSize="20dp" />
 
-            <ImageView
-                android:id="@+id/editIcon3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:layout_marginLeft="5dp"
-                app:srcCompat="@drawable/edit_icon" />
-
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/languageText"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="250dp"
+            android:layout_height="25dp"
             android:layout_below="@id/myLinearLayout6"
-            android:layout_marginLeft="30dp"
-            android:text="English, Russian, Kazakh"
-            android:textColor="@color/white"
-            android:textSize="14dp" />
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="5dp"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="bac"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
     </RelativeLayout>
 
 
